(lang dune 3.20)

(name abap)

(generate_opam_files true)

(source
 (github Sumandora/abap))

(license LICENSE)

(package
 (name abap)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
